# AUV_2022-2023

AUV_2023_Legacy-master/: README.md  codecov.yml  pyproject.toml  requirements-dev.txt  requirements.txt
AUV_2023_Legacy-master/scripts/: auv.py
AUV_2023_Legacy-master/scripts/auv_lib/: cpu_read.py  gripper.py  gyro_test.py  led.py  log.py  thruster.py
AUV_2023_Legacy-master/scripts/camera/: camera_non_locking.py
AUV_2023_Legacy-master/scripts/camera/model/: obj.names  saved_model.mapping  saved_model.xml  yolov4-tiny-custom_last.weights
