[tool.poetry]
name = "auv_2021"
version = "1.0"
description = "AUV Robosub stuff"
authors = ["Nate Ruppert <nate.ruppert@csu.fullerton.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.5"
numpy = "^1.22.3"
pigpio = "^1.78"
adafruit-circuitpython-bno055 = "^5.4.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
Sphinx = "^4.5.0"
rinohtype = "^0.5.3"
sphinx-rtd-theme = "^1.0.0"
pydeps = "^1.10.18"
pytest = "^7.1.2"
flake8 = "^4.0.1"
black = "^22.3.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile='black'

[tool.black]
target-version = ['py39']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''
